--- a/index.html
+++ b/index.html
@@ -6,16 +6,19 @@
     <title>CAI Independiente</title>
     <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header class="encabezado">
-        <img src="./img/Logo1.png" alt="Independiente">
+        <img class="logo" src="./img/Logo1.png" alt="Independiente">
         <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
-        <a href="./index.html">Inicio</a>
-        <a href="./pages/club.html">Club</a>
-        <a href="./pages/socios.html">Socios</a>
-        <a href="./pages/plantel.html">Plantel</a>
-        <a href="./pages/cancha.html">Cancha</a>
+        <ul class="lista-principal">
+            <li><a href="./index.html">Inicio</a></li>
+            <li><a href="./pages/club.html">Club</a></li>
+            <li><a href="./pages/socios.html">Socios</a></li>
+            <li><a href="./pages/plantel.html">Plantel</a></li>
+            <li><a href="./pages/cancha.html">Cancha</a></li>
+        </ul>
     </header>
     <br><br>
     <Main class="cuerpo-pagina">
@@ -29,7 +32,7 @@
                 <img src="./img/Independiente1948.jpg" alt="equipo">
                 <p>En el ámbito internacional, el equipo ha conseguido el récord de siete títulos en la Copa Libertadores de América (1964, 1965, 1972, 1973, 1974, 1975 y 1984), con el hito de haber sido el único club en ganar cuatro finales consecutivas. Junto con la Libertadores, es el máximo ganador de cuatro competencias internacionales distintas: la Copa Interamericana con tres títulos (1973, 1974 y 1976), la Supercopa Sudamericana con dos (1994 y 1995, al igual que Cruzeiro) y la Copa Sudamericana también con dos (2010 y 2017, récord compartido con Boca Juniors, Athletico Paranaense e Independiente del Valle).15​ También se consagró en la Recopa Sudamericana 1995 y en la Copa Suruga Bank 2018. Si se incluyen los campeonatos rioplatenses de fútbol, el palmarés total asciende a veinte títulos, con las ediciones 1938 y 1939 de la Copa Dr. Ricardo Aldao.16​</p>
                     
-                <p>Con base en los mencionados logros Independiente obtuvo su apodo de «Rey de Copas», tras obtener su 12.º título internacional (en referencia a la carta homónima de la baraja española).17​ Sus mayores logros deportivos los obtuvo en los años 1973 y 1984 cuando se consagró campeón mundial en la Copa Intercontinental, derrotando a los campeones europeos: la Juventus de Italia y el Liverpool de Inglaterra respectivamente. Con su victoria ante Liverpool en Japón, Independiente ganó el primer enfrentamiento entre un equipo argentino y uno británico tras la Guerra de Malvinas, razón por la cual fue llamado el «Orgullo Nacional».18​ También generó un impacto en el mundo del fútbol cuando en 1953 derrotó por 6‒0 como visitante al Real Madrid español y 8‒1 al Sporting portugués.19​</p>
+                <p>Con base en los mencionados logros Independiente obtuvo su apodo de «Rey de Copas», asdfasdfasfd tras obtener su 12.º título internacional (en referencia a la carta homónima de la baraja española).17​ Sus mayores logros deportivos los obtuvo en los años 1973 y 1984 cuando se consagró campeón mundial en la Copa Intercontinental, derrotando a los campeones europeos: la Juventus de Italia y el Liverpool de Inglaterra respectivamente. Con su victoria ante Liverpool en Japón, Independiente ganó el primer enfrentamiento entre un equipo argentino y uno británico tras la Guerra de Malvinas, razón por la cual fue llamado el «Orgullo Nacional».18​ También generó un impacto en el mundo del fútbol cuando en 1953 derrotó por 6‒0 como visitante al Real Madrid español y 8‒1 al Sporting portugués.19​</p>
                     
                 <p>En el año 2009 la Federación Internacional de Historia y Estadísticas de Fútbol (IFFHS) realizó un ranking internacional del siglo xx, ubicando a Independiente como el segundo mejor equipo sudamericano y mejor equipo argentino de dicho siglo.20​</p>
             </section>
@@ -45,5 +48,6 @@
         <a href="https://www.Facebook.com" target="_blank">Facebook</a>
         <a href="https://www.Instagram.com" target="_blank">Instagram</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
