--- a/pages/cancha.html
+++ b/pages/cancha.html
@@ -1,24 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAI Independiente</title>
     <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/main.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <header class="encabezado">
-        <img src="../img/Logo1.png" alt="Independiente">
-        <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
-        <a href="../index.html">Inicio</a>
-        <a href="../pages/club.html">Club</a>
-        <a href="../pages/socios.html">Socios</a>
-        <a href="../pages/plantel.html">Plantel</a>
-        <a href="../pages/cancha.html">Cancha</a>
-    </header>
+  <header class="encabezado">
+    <img class="logo" src="../img/Logo1.png" alt="Independiente">
+    <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
+    <ul class="lista-principal">
+        <li><a href="../index.html">Inicio</a></li>
+        <li><a href="./club.html">Club</a></li>
+        <li><a href="./socios.html">Socios</a></li>
+        <li><a href="./plantel.html">Plantel</a></li>
+        <li><a href="./cancha.html">Cancha</a></li>
+    </ul>
+</header>
     <br><br>
     <Main>
+        <div id="carouselExample" class="carousel slide">
+                <div class="carousel-inner">
+                  <div class="carousel-item active">
+                    <img src="../img/Estadio.jpeg" class="d-block w-100" alt="estadio1">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/Estadio1.jpg" class="d-block w-100" alt="estadio2">
+                  </div>
+                  <div class="carousel-item">
+                    <img src="../img/Estadio2.png" class="d-block w-100" alt="estadio3">
+                  </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+                  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+                  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
+        </div>
         <nav>
             <section id="seccion-1">
                 <h2>Estadio Libertadores de America</h2>
@@ -36,18 +60,6 @@
         <div>
             <img src="../clase1/img/Logo.jpeg" alt="Logo Independiente">
         </div>
-        <ol>
-            <li>lista 1</li>
-            <li>lista 2
-                <ul>uno</ul>
-                <ul>dos</ul>
-                <ul>tres</ul>
-            </li>
-            <li>lista 3</li>
-            <li>lista 4</li>
-            <li>lista 5</li>
-            <li>lista 6</li>
-        </ol>
     </Main>
     <br><br>
     <footer class="pie-pagina">
@@ -56,5 +68,6 @@
         <a href="https://www.Facebook.com" target="_blank">Facebook</a>
         <a href="https://www.Instagram.com" target="_blank">Instagram</a>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
