--- a/pages/club.html
+++ b/pages/club.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAI Independiente</title>
-    <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CAI Independiente</title>
+        <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
+        <link rel="stylesheet" href="../css/main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
 <body>
     <header class="encabezado">
-        <img src="../img/Logo1.png" alt="Independiente">
+        <img class="logo" src="../img/Logo1.png" alt="Independiente">
         <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
-        <a href="../index.html">Inicio</a>
-        <a href="../pages/club.html">Club</a>
-        <a href="../pages/socios.html">Socios</a>
-        <a href="../pages/plantel.html">Plantel</a>
-        <a href="../pages/cancha.html">Cancha</a>
+        <ul class="lista-principal">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./club.html">Club</a></li>
+            <li><a href="./socios.html">Socios</a></li>
+            <li><a href="./plantel.html">Plantel</a></li>
+            <li><a href="./cancha.html">Cancha</a></li>
+        </ul>
     </header>
     <br><br>
     <Main>
