--- a/pages/plantel.html
+++ b/pages/plantel.html
@@ -1,53 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CAI Independiente</title>
-    <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/main.css">
-</head>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>CAI Independiente</title>
+        <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
+        <link rel="stylesheet" href="../css/main.css">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    </head>
 <body>
     <header class="encabezado">
-        <img src="../img/Logo1.png" alt="Independiente">
+        <img class="logo" src="../img/Logo1.png" alt="Independiente">
         <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
-        <a href="../index.html">Inicio</a>
-        <a href="../pages/club.html">Club</a>
-        <a href="../pages/socios.html">Socios</a>
-        <a href="../pages/plantel.html">Plantel</a>
-        <a href="../pages/cancha.html">Cancha</a>
+        <ul class="lista-principal">
+            <li><a href="../index.html">Inicio</a></li>
+            <li><a href="./club.html">Club</a></li>
+            <li><a href="./socios.html">Socios</a></li>
+            <li><a href="./plantel.html">Plantel</a></li>
+            <li><a href="./cancha.html">Cancha</a></li>
+        </ul>
     </header>
     <br><br>
     <Main>
-        <nav>
-            <section id="seccion-1">
-                <h2>Jugadores 2024</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto dolorem explicabo pariatur aliquam! Voluptas earum tenetur sed suscipit! Dolore maiores itaque tempore, harum laboriosam odit eaque dolorum molestiae totam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo in magnam accusantium perferendis cum asperiores fuga id reiciendis? Sit voluptatibus dolorum accusantium quaerat vel voluptate repudiandae qui sapiente ad odit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquid ipsum omnis enim repellat ipsa quos, explicabo et, perferendis numquam est. Deleniti at ratione molestias aspernatur tenetur! Vel, quam reprehenderit!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, tempora provident, nemo pariatur numquam commodi eos nostrum neque mollitia ut nihil, iusto odit modi quo optio quam. Dolor, magni corrupti?</p>
-            </section>
+        <nav class="arqueros">
+            <h1>Plantel del 2024</h1>
+            <h2>Arqueros:</h2>
+            <nav class="atajan">
+                <img src="../img/33_rodrigo_rey.jpg" alt="">
+                <img src="../img/25_diego_segovia.jpg" alt="">
+                <img src="../img/12_mateo_morro.jpg" alt="">
+            </nav>
         </nav>
-        <nav>
-            <section id="seccion-2">
-                <h2>seccion-2</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora iusto dolorem explicabo pariatur aliquam! Voluptas earum tenetur sed suscipit! Dolore maiores itaque tempore, harum laboriosam odit eaque dolorum molestiae totam?Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quo in magnam accusantium perferendis cum asperiores fuga id reiciendis? Sit voluptatibus dolorum accusantium quaerat vel voluptate repudiandae qui sapiente ad odit!</p>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem aliquid ipsum omnis enim repellat ipsa quos, explicabo et, perferendis numquam est. Deleniti at ratione molestias aspernatur tenetur! Vel, quam reprehenderit!Lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, tempora provident, nemo pariatur numquam commodi eos nostrum neque mollitia ut nihil, iusto odit modi quo optio quam. Dolor, magni corrupti?</p>
-            </section>
+        <nav class="defensa">
+            <h2>Defensa:</h2>
+            <nav class="defensores">
+                <img src="../img/02_joaquín_laso.jpg" alt="">
+                <img src="../img/03_adrián_sporle.jpg" alt="">
+                <img src="../img/03_edgar_elizalde.jpg" alt="">
+                <img src="../img/04_mauricio_isla.jpg" alt="">
+                <img src="../img/07_julio_buffarini.jpg" alt="">
+                <img src="../img/15_damian_perez.jpg" alt="">
+                <img src="../img/26_felipe_aguilar.jpg" alt="">
+                <img src="../img/29-juan-fedorco.jpg" alt="">
+                <img src="../img/31_fernando_da_rosa.jpg" alt="">
+                <img src="../img/79_ayrton_costa.jpg" alt="">
+            </nav>
         </nav>
-        <div>
-            <img src="../clase1/img/Logo.jpeg" alt="Logo Independiente">
-        </div>
-        <ol>
-            <li>lista 1</li>
-            <li>lista 2
-                <ul>uno</ul>
-                <ul>dos</ul>
-                <ul>tres</ul>
-            </li>
-            <li>lista 3</li>
-            <li>lista 4</li>
-            <li>lista 5</li>
-            <li>lista 6</li>
-        </ol>
+        <nav class="mediocampo">
+            <h2>Medicampo:</h2>
+            <nav class="medio-campo">
+                <img src="../img/08_gabriel_neves.jpg" alt="">
+                <img src="../img/10_santiago_toloza.jpg" alt="">
+                <img src="../img/11_federico_mancuello.jpg" alt="">
+                <img src="../img/17_lucas_gonzález.jpg" alt="">
+                <img src="../img/19_alex_luna.jpg" alt="">
+                <img src="../img/30_tomás_parmo.jpg" alt="">
+                <img src="../img/21_david_martínez.jpg" alt="">
+                <img src="../img/35_santiago_salle.jpg" alt="">
+                <img src="../img/23_ivan_marcone.jpg" alt="">
+                <img src="../img/28_jhonny_quiñonez.jpg" alt="">
+                <img src="../img/27_diego_tarzia.jpg" alt="">
+            </nav>
+        </nav>
+        <nav class="delanteros">
+            <h2>Delanteros:</h2>
+            <nav class="delantera">
+                <img src="../img/09_gabriel_Ávalos.jpg" alt="">
+                <img src="../img/18_ignacio_maestro_puch.jpg" alt="">
+                <img src="../img/20_rodrigo_márquez.jpg" alt="">
+                <img src="../img/22_javier_ruiz.jpg" alt="">
+                <img src="../img/24_santiago_lópez.jpg" alt="">
+                <img src="../img/34_matias_gimenez.jpg" alt="">
+                <img src="../img/32_aleixs_canelo.jpg" alt="">
+            </nav>
+        </nav>
     </Main>
     <br><br>
     <footer class="pie-pagina">
