--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CAI Independiente</title>
-    <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Logo1.png" type="image/x-icon">
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
     <header class="encabezado">
-        <img class="logo" src="./img/Logo1.png" alt="Independiente">
+        <img class="logo" src="./img/Logo.jpeg" alt="Independiente">
         <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
         <ul class="lista-principal">
             <li><a href="./index.html">Inicio</a></li>
