--- a/pages/club.html
+++ b/pages/club.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>CAI Independiente</title>
-        <link rel="shortcut icon" href="../clase1/img/Logo1.png" type="image/x-icon">
+        <link rel="shortcut icon" href="../img/Logo1.png" type="image/x-icon">
         <link rel="stylesheet" href="../css/main.css">
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     </head>
 <body>
     <header class="encabezado">
-        <img class="logo" src="../img/Logo1.png" alt="Independiente">
+        <img class="logo" src="../img/Logo.jpeg" alt="Independiente">
         <h1 class="titulo-principal">Club atletico Independiente de Avellaneda</h1>
         <ul class="lista-principal">
             <li><a href="../index.html">Inicio</a></li>
@@ -41,21 +41,6 @@
                     <p>En lo que va del siglo XXI, a pesar de haber formado jugadores de la talla de Diego Forlán, Sergio Agüero, Gabriel Milito y el "Dibu" Emiliano Martínez, Independiente atravesó momentos críticos en el ámbito institucional y futbolístico con cuatro renuncias de presidentes (2001, 2005, 2014 y 2023) relacionadas a deudas millonarias impagas, múltiples embargos, inhibiciones de la FIFA, un descenso en 2013 a la Primera B Nacional (el único en la historia del club; ascendió nuevamente en 2014 siendo tercero) y una sequía de 22 años sin ganar un título local (el último fue el Apertura 2002). Por otro lado, el club demolió su viejo estadio la Doble Visera en 2005 para la construcción del Estadio Libertadores de América, inaugurado en 2010 sin terminar y finalizado en 2016. En el medio de estas crisis, Independiente se consagró campeón en la Copa Sudamericana 2010, la Copa Sudamericana 2017 y la Copa Suruga Bank 2018, que extendieron el palmarés internacional del club reconocido por Conmebol a 18 títulos, recuperando su récord de club con más títulos internacionales en América (compartido con Boca Juniors).</p>
             </section>
         </nav>
-        <div>
-            <img src="../img/Logo.jpeg" alt="Logo Independiente">
-        </div>
-        <ol>
-            <li>lista 1</li>
-            <li>lista 2
-                <ul>uno</ul>
-                <ul>dos</ul>
-                <ul>tres</ul>
-            </li>
-            <li>lista 3</li>
-            <li>lista 4</li>
-            <li>lista 5</li>
-            <li>lista 6</li>
-        </ol>
     </Main>
     <br><br>
     <footer class="pie-pagina">
